2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.r) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_r) : added	

	* interfaces/R/igraph/R/revolver.R (evolver.d, evolver.ad) : 
	default parameter values changed 

	* interfaces/R/igraph/R/revolver.R (evolver.el) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_el) : added	

2007-04-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.dl) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_dl) : added	

	* interfaces/R/igraph/R/revolver.R (evolver.l) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_l) : added

	* interfaces/R/igraph/R/revolver.R (evolver.de) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_de) : added

	* interfaces/R/igraph/R/revolver.R (evolver.e) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_e) : added

	* interfaces/R/igraph/R/revolver.R (evolver.ade) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_ade) : added

	* interfaces/R/src/rinterface.c (R_igraph_0orarray3_to_SEXP) : added

2007-04-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/basic.R (is.igraph) : modified to conform the
	R rules

	* interfaces/R/igraph/R/revolver.R (evolver.ad) 
	* interfaces/R/src/rinterface.c (R_igraph_evolver_ad) :
	error calculation added

	* interfaces/R/igraph/R/revolver.R (evolver.d) : error argument added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_d) : error calculation
	added

2007-04-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (leading.eigenvector.community)
	(leading.eigenvector.community.step) 
	(as.dendrogram.igraph.eigenc) : added
	* interfaces/R/src/rinterface.c (R_igraph_leading_eigenvector_community)
	(R_igraph_leading_eigenvector_community_step) : added

	* interfaces/R/igraph/R/community.R (community.cut)
	(edge.type.matrix) : removed

2007-04-12  Gabor Csardi  <csardi@rmki.kfki.hu>
